Fixed collapse on infosida

--- a/css/infosida.css
+++ b/css/infosida.css
@@ -42,3 +42,6 @@
     font-size:small;
 }
 
+#infosida .card-body {
+    color: #181a1f;
+}
